@@ -45,6 +45,7 @@ efi32_dir="${libdir}/@PACKAGE@/i386-efi"
 efi64_dir="${libdir}/@PACKAGE@/x86_64-efi"
 ia64_dir="${libdir}/@PACKAGE@/ia64-efi"
 sparc64_dir="${libdir}/@PACKAGE@/sparc64-ieee1275"
+arcs_dir="${libdir}/@PACKAGE@/mips-arc"
 ppc_dir="${libdir}/@PACKAGE@/powerpc-ieee1275"
 rom_directory=
 override_dir=
@@ -91,7 +92,8 @@ usage () {
     print_option_help "--label-bgcolor=$(gettext "COLOR")" "$(gettext "use COLOR for label background")"
     print_option_help "--product-name=$(gettext "STR")" "$(gettext "use STR as product")"
     print_option_help "--product-version=$(gettext "STR")" "$(gettext "use STR as product version")"
-    print_option_help "--sparc-boot" "$(gettext "enable sparc boot. Disables HFS+, APM and boot as disk image for i386-pc")"
+    print_option_help "--sparc-boot" "$(gettext "enable sparc boot. Disables HFS+, APM, ARCS and boot as disk image for i386-pc")"
+    print_option_help "--arcs-boot" "$(gettext "enable ARCS (big-endian mips machines, mostly SGI) boot. Disables HFS+, APM, sparc64 and boot as disk image for i386-pc")"
     echo
     gettext_printf "%s generates a bootable rescue image with specified source files, source directories, or mkisofs options listed by the output of \`%s'\n" "xorriso -as mkisofs -help" "$self" | grub_fmt
     echo
@@ -153,6 +155,9 @@ do
 
     --sparc-boot)
         system_area=sparc64 ;;
+
+    --arcs-boot)
+        system_area=arcs ;;
 
     --product-name)
         product_name=`argument $option "$@"`; shift ;;
@@ -273,6 +278,8 @@ if [ "${override_dir}" = "" ] ; then
 	    system_area=common;
 	elif test -e "${sparc64_dir}" ; then
 	    system_area=sparc64;
+	elif test -e "${arcs_dir}" ; then
+	    system_area=arcs;
 	fi
     fi
     if test -e "${multiboot_dir}" ; then
@@ -314,6 +321,9 @@ if [ "${override_dir}" = "" ] ; then
     if test -e "${sparc64_dir}" ; then
         process_input_dir "${sparc64_dir}" sparc64-ieee1275
     fi
+    if test -e "${arcs_dir}" ; then
+        process_input_dir "${arcs_dir}" mips-arc
+    fi
 else
     . "${override_dir}"/modinfo.sh
     process_input_dir "${override_dir}" ${grub_modinfo_target_cpu}-${grub_modinfo_platform}
@@ -330,6 +340,7 @@ else
     ppc_dir=
     i386_ieee1275_dir=
     sparc64_dir=
+    arcs_dir=
     case "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" in
         i386-multiboot) multiboot_dir="${override_dir}" ;;
         i386-coreboot) coreboot_dir="${override_dir}" ;;
@@ -343,6 +354,7 @@ else
 	mips-qemu_mips) mips_qemu_dir="${override_dir}" ;;
 	powerpc-ieee1275) ppc_dir="${override_dir}"; system_area=common ;;
 	sparc64-ieee1275) sparc64_dir="${override_dir}"; system_area=sparc64 ;;
+	mips-arc) arcs_dir="${override_dir}"; system_area=arcs ;;
 	i386-ieee1275) i386_ieee1275_dir="${override_dir}" ;;
     esac
 fi
@@ -468,6 +480,14 @@ if [ -e "${iso9660_dir}"/boot/grub/sparc64-ieee1275/core.img ] && [ "$system_are
    sysarea_img="`mktemp "${TMPDIR:-/tmp}/tmp.XXXXXXXXXX"`" || exit 1
    dd if=/dev/zero count=1 bs=512 | cat - "${sparc64_dir}"/cdboot.img > "$sysarea_img"
    grub_mkisofs_arguments="${grub_mkisofs_arguments} -G $sysarea_img -B , --grub2-sparc-core /boot/grub/sparc64-ieee1275/core.img"
+fi
+
+make_image "${arcs_dir}" mips-arc "${iso9660_dir}/boot/grub/mips-arc/core.img" ""
+if [ -e "${iso9660_dir}/boot/grub/mips-arc/core.img" ]; then
+   grub_mkisofs_arguments="${grub_mkisofs_arguments} /boot/grub/mips-arc/grub=${iso9660_dir}/boot/grub/mips-arc/core.img /boot/grub/mips-arc/sashARCS=${iso9660_dir}/boot/grub/mips-arc/core.img"
+fi
+if [ -e "${iso9660_dir}/boot/grub/mips-arc/core.img" ] && [ "$system_area" = arcs ]; then
+   grub_mkisofs_arguments="${grub_mkisofs_arguments} -mips-boot /boot/grub/mips-arc/sashARCS -mips-boot /boot/grub/mips-arc/grub"
 fi
 
 make_image "${mipsel_qemu_dir}" mipsel-qemu_mips-elf "${iso9660_dir}/boot/mipsel-qemu_mips.elf" "pata"
