@@ -1,5 +1,9 @@
 2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-mkrescue.in: Add mips-arc support.
+
+2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/kern/dl.c (grub_dl_resolve_symbols): Handle malloc failure.
 
 2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>
